converted the quick start nav to use a collection

--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,7 @@ title: Clarify Documentation Site
 
 # Exclude our ruby stuff
 exclude: [Gemfile, Gemfile.lock, README.md]
+
+collections:
+  quickstarts:
+    output: true
